--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ header a{
     
 }
 header ul{
-    display: flex;  
+    display: none;  
     list-style: none; 
 }
 nav ul li {
@@ -44,11 +44,12 @@ body {
 .grid-container {
     background-color: black;
     border: 5px solid black;
-    display: grid;
+    display: inline-block;
     grid-template-columns: 550px ;
     grid-template-rows: 400px 100px ;
     row-gap: 15px; 
     column-gap: 25px;
+
 
 }
 .grid-item{
@@ -129,4 +130,19 @@ a {
 footer{
     font-size: x-small;
     font-family: Arial, Helvetica, sans-serif;
+}
+@media only screen and (min-width: 480px) {
+    header ul {
+        display: flex;
+        justify-content: end ;
+
+    
+    }
+}
+@media only screen and (min-width: 480px){
+
+    .grid-container{
+        display: grid;
+    }
+    
 }
