--- a/css/style.publicaciones.css
+++ b/css/style.publicaciones.css
@@ -1,13 +1,46 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 header{
+    display: flex;
     background-color: black;
-    border-bottom: 2px solid gray;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px;
+    
+     
+
+}
+
+header ul{
+    display: none; 
+    list-style: none; 
+}
+nav ul li {
+    margin: 6px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: #686565;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: end; 
+    transition: 3s;
+
+}
+nav ul li a:hover {
+    color: white;
+    margin: 10px;
+
+}
+section h2 {
+    background-color: #686565;display: flex;
+    justify-content: center;
 }
 
 
 
-header nav {
-    display:none ;
-}
 h2{
 
     color: rgb(99, 96, 96);
@@ -37,6 +70,32 @@ h2{
 
  }
 
-@media only sceen and (min-width: 768px)  
+
+@media only screen and (min-width: 412px) {
+    header ul {
+        display: flex;
+        justify-content: end ;
+
+    }
+}
+
+    
+ 
+
+    
+    
+
+
+
+
+    
+    
+    
+
+    
+
+    
+
+
 
 
