--- a/css/style.quienes.css
+++ b/css/style.quienes.css
@@ -4,7 +4,11 @@
 }
 header{
     
-    
+    background-color: black;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px;
+    display: flex;
      
 
 }
