--- a/css/style.contacto.css
+++ b/css/style.contacto.css
@@ -1,10 +1,20 @@
-header {
+*{
+    margin: 0;
+    padding: 0;
+}
+
+header{
+    display: flex;
     background-color: black;
     justify-content: space-between;
     align-items: center;
     margin: 5px;
-    display: flex;
+    border: #0a0a0a;
+    
+     
+
 }
+
 header a{
     text-decoration: none;
     color: #686565;
@@ -33,7 +43,62 @@ nav ul li a:hover {
     margin: 10px;
 
 }
+.imagen {
+    width: 90%;
+}
+.container{
+    background-color: #686565;
+    width: 850px; ;
+    height: 550px;
+    padding: 10px;
+    margin: 15px;
+    margin-right: 150px ;
+    border-radius: 10px;
+    display: flex;
+    gap: 35px;
+    border: 5px solid black;
+    
+}
+
+div image {
+    width: 450px;
+    height: 300px;
+    
+    margin-bottom: 35px;
+}
+ 
+ div.formulario {
+    font-family: Arial, Helvetica, sans-serif;
+    display: block;
+    align-content: center;
+    margin-top: 15px;
+    width: 150px;
+
+    
+    
+ }
+ 
+ h1{
+    font-family: Arial, Helvetica, sans-serif;
+   
+    
+ }
+  p{
+    display: flex;
+
+  }
+ .redes {
+    margin-top: 45px;
+    display: flex;
+   
+ }    
+
+ .redes li ul{
+
+     text-align: none;
+ }
 body{
+    background-color: rgb(185, 179, 179);
     
 }
     
