--- a/css/style.publicaciones.css
+++ b/css/style.publicaciones.css
@@ -39,7 +39,20 @@ section h2 {
     justify-content: center;
 }
 
+.tarjetas{
+    background-color: #686565; 
+    margin: 25px;
+    border-radius: 5px;
+    border: 5px solid black;
 
+}
+ .tarjetas image {
+    width: 450px;
+   
+ }
+ .tarjetas h3{
+    color: black;
+}
 
 h2{
 
