--- a/css/style.servicios.css
+++ b/css/style.servicios.css
@@ -46,3 +46,17 @@ h1{
     justify-content: center;
 }
 
+
+.redes {
+    margin-top: 55px;
+    display: flex;
+    justify-content:;
+    background-color: #686565;  
+    padding: 10px; 
+     border: 5px solid black
+ }   
+
+ .redes li ul{
+
+     text-align: none;
+ }
