--- a/css/style.contacto.css
+++ b/css/style.contacto.css
@@ -48,7 +48,7 @@ nav ul li a:hover {
 }
 .container{
     background-color: #686565;
-    width: 850px; ;
+    width: 950px; ;
     height: 550px;
     padding: 10px;
     margin: 15px;
@@ -93,10 +93,16 @@ div image {
    
  }    
 
- .redes li ul{
-
-     text-align: none;
- }
+div a{
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    color: whitesmoke;
+    align-content: center;
+    margin: 10px;
+   background-color: rgb(12, 12, 12);
+   border-radius: 5px;
+}
+ 
 body{
     background-color: rgb(185, 179, 179);
     
