--- a/css/style.quienes.css
+++ b/css/style.quienes.css
@@ -54,10 +54,15 @@ section p {
    
  }    
 
- .redes li ul{
-
-     text-align: none;
- }
+ div a{
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    color: whitesmoke;
+    align-content: center;
+    margin: 10px;
+   background-color: rgb(12, 12, 12);
+   border-radius: 5px;
+}
 
 body {
     background-color: #929090;
