--- a/css/style.css
+++ b/css/style.css
@@ -127,10 +127,21 @@ a {
     font-weight: bolder;
 
 }
+
 footer{
     font-size: x-small;
     font-family: Arial, Helvetica, sans-serif;
 }
+ 
+
+    
+.enlace-whatsapp {
+    position: fixed;
+    right: 40px;
+    bottom: 5px;
+
+}
+
 @media only screen and (min-width: 480px) {
     header ul {
         display: flex;
