--- a/css/style.css
+++ b/css/style.css
@@ -1,159 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-header {
-    background-color: black;
-    justify-content: space-between;
-    align-items: center;
-    margin: 5px;
-    display: flex;
-}
-header a{
-    text-decoration: none;
-    color: #686565;
-    font-family: Arial, Helvetica, sans-serif;
-    justify-content: end;
-    
-}
-header ul{
-    display: block;  
-    list-style: none; 
-}
-nav ul li {
-    margin: 6px;
-}
-nav ul li a{
-    text-decoration: none;
-    color: #686565;
-    font-family: Arial, Helvetica, sans-serif;
-    justify-content: end; 
-    transition: 3s;
-
-}
-
-nav ul li a:hover {
-    color: white;
-    margin: 10px;
-
-}
-
 body {
-    background-color: white
-}
-.grid-container {
-    background-color: black;
-    border: 5px solid black;
-    display: inline-block;
-    grid-template-columns: 550px ;
-    grid-template-rows: 400px 100px ;
-    row-gap: 15px; 
-    column-gap: 25px;
-
-
-}
-.grid-item{
-    border: 1px solid;
-    margin: 5px;
-    
-    
+  background-color: blue;
 }
 
-.item-1 {
-    background-color: rgb(199, 194, 194);
-    grid-row: 1/2;
-    grid-column: 1/2;
-    padding-top: 20px;
-    border-radius: 15px;
-
-}
-.item-2 {
-   
-    background-color: black;
-    border-radius: 5px;
-}
- 
-.item-2 .tribunales{
-    position: relative;
-    left: 75px;
-    top: 20px;
-    border-radius: 10%;
-    
-}
-
-.item-3 {
-    background-color: grey ;
-    grid-column: 1/3;
-    border-radius:10px ;
-    
-}
-
-h1 {
-    
-
-    color: rgb(99, 96, 96);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 70px;
-    text-align: center;
-}
- 
-
-h1 span {
-    color: #686565;
- 
-   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-   font-weight: bold;
-}
-
-
-
-h2 {
-    font-size: 25px;
-
-    margin-top: 35px;
-    color: rgb(54, 53, 53);
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    font-weight: bolder;
-    padding-left: 5px;
-    padding-right: 10px;
-
-}
-
-a {
-    color: rgb(83, 80, 80);
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
-
-}
-
-footer{
-    font-size: x-small;
-    font-family: Arial, Helvetica, sans-serif;
-}
- 
-
-    
-.enlace-whatsapp {
-    position: fixed;
-    right: 40px;
-    bottom: 5px;
-
-}
-
-@media only screen and (min-width: 480px) {
-    header ul {
-        display: flex;
-        justify-content: end ;
-
-    
-    }
-}
-@media only screen and (min-width: 480px){
-
-    .grid-container{
-        display: grid;
-    }
-    
-}
+/*# sourceMappingURL=style.css.map */
