--- a/scss/style.css
+++ b/scss/style.css
@@ -3,6 +3,29 @@
   padding: 0;
 }
 
-body {
-  background-color: brown;
+header {
+  display: flex;
+  background-color: black;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5px;
+}
+header nav {
+  transition: 3s;
+}
+header nav ul {
+  display: block;
+  list-style: none;
+  margin: 6px;
+}
+header nav ul li a {
+  text-decoration: none;
+  color: #686565;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: end;
+  transition: 3s;
+}
+header nav ul li a a {
+  color: white;
+  margin: 10px;
 }/*# sourceMappingURL=style.css.map */
