--- a/copy.style.css/style.copy.css
+++ b/copy.style.css/style.copy.css
@@ -10,16 +10,15 @@
   
   header {
     display:flex;
-    background-color: black;
+    background: rgb(17,17,17);
+    background: linear-gradient(90deg, rgba(17,17,17,1) 0%, rgba(198,199,203,1) 35%);
     justify-content: space-between;
     border-bottom: 3px solid grey;
-    align-items: center;
   }
    header nav ul  {
     display:block;
     list-style-type: none;
     
-   
    }
   
   header nav ul li{
@@ -28,7 +27,7 @@
   }
    nav ul li a{
     display: flex;
-    color: grey;
+    color: black;
     text-decoration:none ;
     font-family: Arial, Helvetica, sans-serif;
     font: size 0.5px; ;
@@ -60,7 +59,7 @@
    .encabezado h1 {
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;
+    font-size: 65px;
   
   
    }
@@ -68,6 +67,7 @@
    margin: 15px ;
    justify-content: center;
    font-family: Arial, Helvetica, sans-serif;
+   font-size: 35px;
    
   }
   
@@ -81,8 +81,10 @@
   .foto-portada img {
     border-radius: 15px;
     border: 3px solid black;
+    width: 350px;
   }
   .enlace-whatsapp{
+    
     position: fixed;
     right: 40px;
     bottom: 5px;
@@ -100,7 +102,17 @@
   /* QUIENES SOMOS*/
   
   
-  .imagen-quienes{
+
+  
+  .container-img {
+    margin-top: 15px ;
+    display: flex ;
+    margin: 5px;
+    gap: 15px;
+    
+  }
+
+  .div-imagen-quienes{
     padding-top: 20px;
     width: 490px;
     height: 450px;
@@ -109,23 +121,21 @@
     border: 3px solid black;
   }
   
-  .card {
-    
-    margin-top: 35px;
-    background-color: rgb(119, 133, 133);
-    border: 3px solid black;
-  }
   
-  .card-body{
   
+  .div-card-body{
     background-color: rgb(147, 142, 142);
     margin:  35px;
-    border-radius : 15px;
+    border-radius : 15px;width: 350px;
+    height:300px ;
+    margin-top: 35px;
+    border: 3px solid black;
+
   }
   
   
   
-  .imagenes-acuerdo{
+  .div-imagenes-acuerdo{
     padding-top: 30px;
     margin-top: 35px;
     border-radius : 15px;
@@ -133,18 +143,24 @@
     width: 490px;
     height: 450px;
   }
+
+
   
   
   /* SERVICIOS*/
   
-  h1{
+  h1.encabezado-servicios{
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-size: 40px ;
+
   }
   
   
   /* PUBLICACIONES*/
   
-  .tarjetas{
+  .tarjetas-cred{
     display: flex;
     margin: 10px;
     gap: 115px;
@@ -198,6 +214,7 @@
   }
   .imagen-lapto{
     padding-top: 45px;
+    padding-bottom: 45px ;
     width: 280;
     height: 350;
     border-radius: 8px;
@@ -251,8 +268,8 @@
   h3{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 35px ;
-    border-radius: 15px ;
-    margin: 25px;
+     border-radius: 15px ;
+     margin: 25px;
   }
   /*media query */
   
