--- a/css/style.css
+++ b/css/style.css
@@ -8,34 +8,198 @@ body {
   background-color: rgb(119, 133, 133);
 }
 
-header {
+.titulo, .consultas, .informacion {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+}
+
+.enlace-whatsapp a {
+  position: fixed;
+  right: 40px;
+  bottom: 5px;
+}
+.enlace-whatsapp a img {
+  width: 25px;
+}
+
+.titulo, .consultas, .informacion {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+}
+
+.imagen-quienes img {
+  width: 483px;
+  height: 400px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  border-radius: 15px;
+  border: 3px solid black;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.tarjeta {
+  background-color: rgb(147, 142, 142);
+  border-radius: 15px;
+  width: 350px;
+  height: 400px;
+  border-radius: 15px;
+  border: 3px solid black;
+}
+
+h3.tarjeta-titulo {
+  margin-top: 35px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 45px;
+  color: black;
+}
+
+p.tarjeta-texto {
+  margin: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  color: black;
+}
+
+.imagenes-acuerdo img {
+  width: 490px;
+  height: 450px;
+  margin-bottom: 35px;
+  border-radius: 15px;
+  border: 3px solid black;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.tarjetas-cred {
   display: flex;
-  background: rgb(11, 11, 11);
-  background: linear-gradient(90deg, rgba(11, 11, 11, 0.3729866947) 28%, rgba(175, 169, 184, 0.5662640056) 86%, rgb(66, 65, 71) 100%);
-  justify-content: space-between;
-  align-items: center;
+  margin: 10px;
+  gap: 115px;
+}
+
+.foto-tarjeta {
+  transition: 2s;
+}
+.foto-tarjeta img {
+  width: 480;
+  height: 350;
+  margin-left: 95px;
+  border-radius: 9px;
+  border: 5px solid black;
+  box-shadow: -19px -15px 61px -12px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -19px -15px 61px -12px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -19px -15px 61px -12px rgba(0, 0, 0, 0.75);
+}
+.foto-tarjeta:hover {
+  transform: translatex(-45px);
+}
+
+.reglamentacion {
+  width: 470px;
+  height: 360px;
+  background-color: rgb(147, 142, 142);
+  padding: 15px;
+  border-radius: 10px;
+  border: 3px solid black;
+  margin: 15px;
+  box-shadow: 33px 40px 97px -9px rgba 0, 0, 0, 0.75;
+  -webkit-box-shadow: 33px 40px 97px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 33px 40px 97px -9px rgba(0, 0, 0, 0.75);
+}
+.reglamentacion p {
+  columns: 2;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+}
+
+.imagen-lapto img {
+  padding-bottom: 25px;
+  padding-top: 25px;
+  width: 280;
+  height: 350;
+  border-radius: 8px;
+  border: 5px solid black;
+  background-color: rgb(147, 142, 142);
+  box-shadow: 33px 40px 97px -9px rgba 0, 0, 0, 0.75;
+  -webkit-box-shadow: 33px 40px 97px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 33px 40px 97px -9px rgba(0, 0, 0, 0.75);
+  transition: 2s;
+}
+.imagen-lapto img:hover {
+  transform: translatex(-45px);
+}
+
+.formulario {
+  margin-top: 15px;
+  display: flex;
+  width: 880;
+  height: 440;
+  border-radius: 8px;
+  border: 5px solid black;
+  padding: 15px;
+  background-color: rgb(147, 142, 142);
+  box-shadow: 33px 40px 97px -9px rgba 0, 0, 0, 0.75;
+  -webkit-box-shadow: 33px 40px 97px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 33px 40px 97px -9px rgba(0, 0, 0, 0.75);
+  transition: 2s;
+}
+.formulario:hover {
+  transform: translatex(-45px);
+}
+
+.redes-sociales {
+  padding: 45px;
+  display: block;
+  border: 5px solid black;
+  border-radius: 15px;
+  background-color: rgb(147, 142, 142);
+  grid-row: 5px;
+  transition: 2s;
+}
+.redes-sociales:hover {
+  transform: translatex(-45px);
+}
+.redes-sociales h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 35px;
+  border-radius: 15px;
+  margin: 15px;
+}
+.redes-sociales li {
+  list-style: none;
   margin: 5px;
 }
-header nav {
-  transition: 3s;
-}
-header nav ul {
-  display: block;
-  list-style: none;
-  margin: 6px;
-}
-header nav ul li a {
-  text-decoration: none;
-  color: #0f0e0e;
+.redes-sociales li a {
+  margin: 5px;
   font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  border: 2px black;
+  font-size: 15px;
 }
-header nav ul li a a {
-  color: white;
-  margin: 10px;
+
+.container-img {
+  display: flex;
+  margin: 5px;
+  margin-top: 15px;
+  gap: 15px;
+}
+
+.container-contacto {
+  display: flex;
+  margin-left: 65px;
+  gap: 55px;
+}
+
+footer h6 {
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
 }
 
 .portada {
-  display: block;
+  display: flex;
   margin: 10px;
 }
 .portada .encabezado {
@@ -44,42 +208,69 @@ header nav ul li a a {
   margin: 10px;
   border-radius: 15px;
   border: 3px solid black;
+  box-shadow: 33px 40px 97px -9px rgba 0, 0, 0, 0.75;
+  -webkit-box-shadow: 33px 40px 97px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 33px 40px 97px -9px rgba(0, 0, 0, 0.75);
 }
 .portada .encabezado h1 {
-  justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 35px;
+  justify-content: center;
+  font-size: 45px;
+  margin-top: 55px;
+  transition: 2s;
+}
+.portada .encabezado h1:hover {
+  transform: scale(0, 3) translatex(45px);
 }
 .portada .encabezado p {
-  margin: 15px;
+  margin-top: 85px;
   justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
 }
-.portada .encabezado .foto-portada {
+.portada .foto-portada {
   margin-left: 10px;
   margin-top: 10px;
-}
-.portada .encabezado .foto-portada img {
   border-radius: 15px;
   border: 3px solid black;
 }
-.portada .encabezado .foto-portada img .enlace-whatsapp {
+.portada .foto-portada img {
+  width: 350px;
+}
+.portada .enlace-whatsapp a {
   position: fixed;
   right: 40px;
   bottom: 5px;
 }
-.portada .encabezado .foto-portada img .enlace-whatsapp .enlace-whatsapp {
-  position: fixed;
-  right: 40px;
-  bottom: 5px;
-}
-.portada .encabezado .foto-portada img .enlace-whatsapp .enlace-whatsapp .enlace-whatsapp a img {
+.portada .enlace-whatsapp a img {
   width: 35px;
 }
-.portada .encabezado .foto-portada img .enlace-whatsapp .enlace-whatsapp .enlace-whatsapp a img footer h6 {
-  justify-content: center;
-  font-family: Arial, Helvetica, sans-serif;
+
+header {
+  display: flex;
+  background: rgb(17, 17, 17);
+  background: linear-gradient(90deg, rgb(17, 17, 17) 0%, rgb(198, 199, 203) 35%);
+  justify-content: space-between;
+  border-bottom: 3px solid grey;
+  align-items: center;
+}
+header nav ul {
+  display: flex;
+  list-style-type: none;
+}
+header nav ul li {
+  margin: 5px;
+}
+header nav ul li a {
+  display: flex;
   color: black;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 3s;
+}
+header nav ul li a:hover {
+  color: white;
+  margin: 10px;
 }
 
 @media only screen and (min-width: 360px) {
@@ -90,14 +281,14 @@ header nav ul li a a {
   .portada {
     display: flex;
   }
-  .portada .encabezado {
-    padding: 75px;
-  }
-  .portada .encabezado h1 {
+  .encabezado h1 {
     font-size: 65px;
   }
-  .portada .encabezado h1 p {
+  .portada p {
     column-count: 2;
+  }
+  .encabezado {
+    padding: 75px;
   }
 }
 
