--- a/scss/layout/_portada.scss
+++ b/scss/layout/_portada.scss
@@ -1,49 +1,72 @@
-main{
-    
-    .portada{
-        display: block;
+
+    .portada {
+        display: flex;
         margin: 10px; ;
-        div{
+        
             .encabezado{
+                
                 background-color: rgb(147, 142, 142);
                 padding: 35px; ;
                 margin: 10px;
                 border-radius: 15px;
                 border: 3px solid black;
-                h1{
-                    justify-content: center;
-                        font-family: Arial, Helvetica, sans-serif;
-                        font-size: 35px;
-                        p{
+                box-shadow: 33px 40px 97px -9px rgba (0,0,0,0.75);
+                -webkit-box-shadow: 33px 40px 97px -9px rgba(0,0,0,0.75);
+                -moz-box-shadow: 33px 40px 97px -9px rgba(0,0,0,0.75); ;
+                       h1 {
+
+                         font-family: Arial, Helvetica, sans-serif;
+                         justify-content: center;
+                         font-size: 45px;
+                         margin-top: 55px ;
+                         transition: 2s;
+
+                         &:hover{
+                            transform: scale(0,3) translatex(45px);
+                         }
                          
-                            margin: 15px ;
+
+                        
+                         }
+
+                        p{
+                            margin-top: 85px;
                             justify-content: center;
-                            font-family: Arial, Helvetica, sans-serif
+                            font-family: Arial, Helvetica, sans-serif;
+                            font-size: 20px;
                         }
                 }
-            }
-        }
-        div{
-          .foto-portada{
-            width: 35px; 
-                border-radius: 15px;
-                border: 3px solid black;
-          }  
-      
-        }
+        
 
-    .enlace-whatsapp{
-           a{
+        
+          .foto-portada{
+                margin-left: 10px;
+                margin-top: 10px;
+                border-radius: 15px ;
+                border: 3px solid black;
+                img{
+                    width: 350px;
+                }
+            }  
+      
+        
+
+        .enlace-whatsapp{
+            a{
             position: fixed;
             right: 40px;
             bottom: 5px;
-               img{
-                width: 35px;
+            
+            
+             img {
+                    width: 35px;  
                }
-           }
+    
+            } 
+               
+          
         }
     }
-}
 
 
 
@@ -74,4 +97,3 @@ main{
 
 
 
-}
