se arreglo varible

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,7 @@
 //layout//
 @import "./layout/contenedor.scss";
 @import "./layout/footer.scss";
-@import "./layout/portada.scss";;
+@import "./layout/portada.scss";
 @import "./layout/header";
 
 
