--- a/scss/componentes/_clases.scss
+++ b/scss/componentes/_clases.scss
@@ -27,7 +27,7 @@
              width: 350px;
              height:400px;
              border-radius:15px;
-             border: 3px solid black ;
+             border: $borde ;
             }
 
                          h3.tarjeta-titulo{
@@ -59,7 +59,7 @@
             height: 450px;
             margin-bottom: 35px;
             border-radius : 15px;
-            border: 3px solid black;
+            border: $borde;
             padding-top: 30px;
             padding-bottom: 30px;
          }
@@ -100,7 +100,7 @@
             background-color: rgb(147, 142, 142);
             padding: 15px;;
             border-radius: 10px;
-            border: 3px solid black;
+            border: $borde;
             margin: 15px;
             box-shadow: 33px 40px 97px -9px rgba (0,0,0,0.75);
             -webkit-box-shadow: 33px 40px 97px -9px rgba(0,0,0,0.75);
